--- a/WalletPlus/src/main/res/layout/activity_main.xml
+++ b/WalletPlus/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="fill_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="@color/mainColor"
+                android:background="@color/theme_primary"
                 android:minHeight="?attr/actionBarSize"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
@@ -31,7 +31,7 @@
             android:layout_width="@dimen/navigation_drawer_width"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:background="@color/drawerBackground"
+            android:background="@color/navdrawer_background"
             android:orientation="vertical">
 
         <!-- Account view -->
