--- a/WalletPlus/src/main/res/values/color.xml
+++ b/WalletPlus/src/main/res/values/color.xml
@@ -1,8 +1,12 @@
 <resources>
     <!-- Style colors -->
-    <color name="mainColor">#4CAF50</color>
-    <color name="lightMainColor">#C8E6C9</color>
-    <color name="darkerMainColor">#2E7D32</color>
+    <color name="theme_primary_light">#C8E6C9</color>
+    <color name="theme_primary">#4CAF50</color>
+    <color name="theme_primary_dark">#2E7D32</color>
+
+    <color name="body_text_1">#de000000</color>
+    <color name="body_text_1_inverse">#deffffff</color>
+    <color name="body_text_2_inverse">#8affffff</color>
 
     <color name="background">#EEEEEE</color>
 
@@ -12,7 +16,11 @@
     <color name="blue">#0099CC</color>
 
     <!--Drawer -->
-    <color name="drawerBackground">#FFFFFF</color>
+    <color name="navdrawer_background">#FFFFFFFF</color>
+    <color name="navdrawer_text_color_selected">@color/theme_primary</color>
+    <color name="navdrawer_text_color">@color/body_text_1</color>
+    <color name="navdrawer_icon_tint">#888</color>
+    <color name="navdrawer_icon_tint_selected">@color/theme_primary</color>
 
     <!-- Lists -->
     <color name="listItemBackground">#FFFFFF</color>
