--- a/WalletPlus/src/main/res/values/dimens.xml
+++ b/WalletPlus/src/main/res/values/dimens.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="headerbar_elevation">4dp</dimen>
 
+    <dimen name="keyline_1">16dp</dimen>
+    <dimen name="keyline_2">72dp</dimen>
+
+    <dimen name="navdrawer_chosen_account_height">140dp</dimen>
     <dimen name="navigation_drawer_width">240dp</dimen>
+
     <dimen name="cardContentPadding">16dp</dimen>
     <dimen name="cardMargin">8dp</dimen>
     <dimen name="edgePadding">12dp</dimen>
@@ -12,5 +18,11 @@
     <dimen name="mediumFontSize">16sp</dimen>
     <dimen name="largeFontSize">20sp</dimen>
     <dimen name="xLargeFontSize">22sp</dimen>
+    <dimen name="navdrawer_width">260dp</dimen>
 
+    <dimen name="text_size_xsmall">11sp</dimen>
+    <dimen name="text_size_small">12sp</dimen>
+    <dimen name="text_size_medium">14sp</dimen>
+    <dimen name="text_size_large">18sp</dimen>
+    <dimen name="text_size_xlarge">20sp</dimen>
 </resources>
