--- a/WalletPlus/src/main/res/layout/fragment_cash_flow_details.xml
+++ b/WalletPlus/src/main/res/layout/fragment_cash_flow_details.xml
@@ -24,6 +24,7 @@
 
             <LinearLayout android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="12dp"
                     android:gravity="center"
                     android:orientation="horizontal">
 
@@ -52,6 +53,7 @@
 
             <LinearLayout android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="12dp"
                     android:gravity="center"
                     android:orientation="horizontal">
 
@@ -72,34 +74,6 @@
                         fbutton:shadowHeight="2dp"/>
             </LinearLayout>
 
-            <TextView android:id="@+id/amountLabel"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/cashflowAmountLabel"
-                    android:textSize="@dimen/smallFontSize"
-                    android:visibility="invisible"/>
-
-            <EditText android:id="@+id/amount"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/cashflowAmountHint"
-                    android:inputType="numberDecimal|numberSigned"
-                    android:textSize="@dimen/mediumFontSize"/>
-
-            <TextView android:id="@+id/commentLabel"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/cashflowCommentLabel"
-                    android:textSize="@dimen/smallFontSize"
-                    android:visibility="invisible"/>
-
-            <EditText android:id="@+id/comment"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/cashflowCommentHint"
-                    android:inputType="textAutoCorrect"
-                    android:textSize="@dimen/mediumFontSize"/>
-
             <TextView android:id="@+id/categoryLabel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -108,6 +82,7 @@
 
             <LinearLayout android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="12dp"
                     android:gravity="center"
                     android:orientation="horizontal">
 
@@ -127,6 +102,56 @@
                         android:contentDescription="@string/removeCategory"
                         android:src="@drawable/ic_remove"/>
             </LinearLayout>
+
+            <TextView android:id="@+id/amountLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/cashflowAmountLabel"
+                    android:textSize="@dimen/smallFontSize"
+                    android:visibility="invisible"/>
+
+            <EditText android:id="@+id/amount"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="12dp"
+                    android:hint="@string/cashflowAmountHint"
+                    android:inputType="numberDecimal|numberSigned"
+                    android:textSize="@dimen/mediumFontSize"/>
+
+            <TextView android:id="@+id/commentLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/cashflowCommentLabel"
+                    android:textSize="@dimen/smallFontSize"
+                    android:visibility="invisible"/>
+
+            <EditText android:id="@+id/comment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="12dp"
+                    android:hint="@string/cashflowCommentHint"
+                    android:inputType="textAutoCorrect"
+                    android:textSize="@dimen/mediumFontSize"/>
+
+            <TextView android:id="@+id/extraLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/cashflowExtraLabel"
+                    android:textSize="@dimen/smallFontSize"/>
+
+            <CheckedTextView android:id="@+id/isCompleted"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="12dp"
+                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+                    android:text="Transaction is completed."
+                    android:textSize="@dimen/mediumFontSize"/>
+
+            <TextView android:id="@+id/dateLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/cashflowDateLabel"
+                    android:textSize="@dimen/smallFontSize"/>
 
             <LinearLayout android:layout_width="match_parent"
                     android:layout_height="wrap_content"
