--- a/WalletPlus/src/main/res/layout/navigation_drawer.xml
+++ b/WalletPlus/src/main/res/layout/navigation_drawer.xml
@@ -33,37 +33,45 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentEnd="true"
-                        android:layout_marginLeft="16dp"
+                        android:layout_marginStart="16dp"
                         android:paddingBottom="16dp"
                         android:scaleType="center"
                         android:src="@drawable/ic_drawer_accounts_expand"
                         android:visibility="gone"/>
 
-                <TextView android:id="@+id/profile_name"
-                        android:layout_width="match_parent"
+                <com.google.android.gms.common.SignInButton android:id="@+id/sign_in_google"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
                         android:layout_alignParentStart="true"
-                        android:layout_toLeftOf="@id/expand_account_box_indicator"
-                        android:ellipsize="end"
-                        android:maxLines="1"
-                        android:paddingBottom="16dp"
-                        android:singleLine="true"
-                        android:textColor="@color/body_text_2_inverse"
-                        android:textSize="@dimen/text_size_medium"/>
+                        android:layout_alignParentBottom="true"
+                        android:layout_toStartOf="@id/expand_account_box_indicator"/>
 
                 <TextView android:id="@+id/account_email"
+                        android:visibility="invisible"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_above="@id/profile_name"
                         android:layout_alignParentStart="true"
-                        android:layout_toLeftOf="@id/expand_account_box_indicator"
+                        android:layout_alignParentBottom="true"
+                        android:layout_toStartOf="@id/expand_account_box_indicator"
                         android:ellipsize="end"
                         android:maxLines="1"
                         android:singleLine="true"
                         android:textColor="@color/body_text_1_inverse"
                         android:textSize="@dimen/text_size_large"/>
 
+                <TextView android:id="@+id/profile_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_above="@id/sign_in_google"
+                        android:layout_toStartOf="@id/expand_account_box_indicator"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:paddingBottom="16dp"
+                        android:singleLine="true"
+                        android:textColor="@color/body_text_1_inverse"
+                        android:textSize="@dimen/text_size_medium"/>
             </RelativeLayout>
 
         </FrameLayout>
