--- a/WalletPlus/src/main/res/layout/fragment_create_profile.xml
+++ b/WalletPlus/src/main/res/layout/fragment_create_profile.xml
@@ -44,6 +44,10 @@
                     android:layout_height="wrap_content"
                     android:text="@string/profileDownloadProfileLabel"/>
 
+            <ListView android:id="@+id/remoteProfiles"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
             <Button android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
