--- a/WalletPlus/src/main/res/layout/navigation_drawer.xml
+++ b/WalletPlus/src/main/res/layout/navigation_drawer.xml
@@ -45,17 +45,9 @@
                             android:src="@drawable/ic_drawer_accounts_expand"
                             android:visibility="gone"/>
 
-                    <com.google.android.gms.common.SignInButton android:id="@+id/sign_in_google"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentBottom="true"
-                            android:layout_alignParentStart="true"
-                            android:layout_toStartOf="@id/expand_account_box_indicator"/>
-
                     <TextView android:id="@+id/account_email"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_above="@id/profile_name"
                             android:layout_alignParentBottom="true"
                             android:layout_alignParentStart="true"
                             android:layout_toStartOf="@id/expand_account_box_indicator"
@@ -68,7 +60,7 @@
                     <TextView android:id="@+id/profile_name"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_above="@id/sign_in_google"
+                            android:layout_above="@id/account_email"
                             android:layout_alignParentStart="true"
                             android:layout_toStartOf="@id/expand_account_box_indicator"
                             android:ellipsize="end"
