--- a/WalletPlus/src/main/res/layout/item_category_stats_list.xml
+++ b/WalletPlus/src/main/res/layout/item_category_stats_list.xml
@@ -22,13 +22,34 @@
             android:layout_centerVertical="true"
             android:orientation="vertical">
 
-        <TextView android:id="@+id/income"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+        <LinearLayout android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end">
 
-        <TextView android:id="@+id/expense"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+            <TextView android:id="@+id/income"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            <ImageView android:id="@+id/incomeIcon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/arrowup"/>
+        </LinearLayout>
+
+        <LinearLayout android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end">
+
+            <TextView android:id="@+id/expense"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            <ImageView android:id="@+id/expenseIcon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/arrowdown"/>
+        </LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
