--- a/WalletPlus/src/main/res/layout/fragment_cash_flow_details.xml
+++ b/WalletPlus/src/main/res/layout/fragment_cash_flow_details.xml
@@ -28,7 +28,7 @@
                     android:gravity="center"
                     android:orientation="horizontal">
 
-                <Spinner android:id="@+id/fromWallet"
+                <Spinner android:id="@+id/wallet"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
