--- a/WalletPlus/src/main/res/layout/item_cash_flow_list.xml
+++ b/WalletPlus/src/main/res/layout/item_cash_flow_list.xml
@@ -18,7 +18,7 @@
                 android:textSize="@dimen/mediumFontSize"
                 android:textStyle="bold"/>
 
-        <TextView android:id="@+id/fromWallet"
+        <TextView android:id="@+id/wallet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
@@ -30,7 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:layout_below="@id/fromWallet"
+                android:layout_below="@id/wallet"
                 android:layout_toLeftOf="@+id/date"
                 android:textSize="@dimen/smallFontSize"/>
 
