--- a/WalletPlus/src/main/res/layout/item_category_list.xml
+++ b/WalletPlus/src/main/res/layout/item_category_list.xml
@@ -8,6 +8,6 @@
         android:id="@+id/categoryName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:gravity="left" />
+        android:layout_alignParentStart="true"
+        android:gravity="start" />
 </RelativeLayout>
