--- a/WalletPlus/src/main/res/layout/item_category_stats_list.xml
+++ b/WalletPlus/src/main/res/layout/item_category_stats_list.xml
@@ -22,6 +22,7 @@
             android:layout_centerVertical="true"
             android:orientation="vertical">
 
+        <!-- TODO: Zmienić na TextView z obrazkiem -->
         <LinearLayout android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end">
@@ -36,6 +37,7 @@
                     android:src="@drawable/arrowup"/>
         </LinearLayout>
 
+        <!-- TODO: Zmienić na TextView z obrazkiem -->
         <LinearLayout android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end">
