--- a/WalletPlus/src/main/res/layout/item_cash_flow_list.xml
+++ b/WalletPlus/src/main/res/layout/item_cash_flow_list.xml
@@ -9,7 +9,7 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/cardContentPadding">
 
-        <TextView android:id="@+id/category"
+        <TextView android:id="@+id/wallet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
@@ -18,29 +18,12 @@
                 android:textSize="@dimen/mediumFontSize"
                 android:textStyle="bold"/>
 
-        <TextView android:id="@+id/wallet"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@id/category"
-                android:layout_toLeftOf="@+id/date"
-                android:textSize="@dimen/smallFontSize"/>
-
-        <TextView android:id="@+id/toWallet"
+        <TextView android:id="@+id/category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@id/wallet"
-                android:layout_toLeftOf="@+id/date"
-                android:textSize="@dimen/smallFontSize"/>
-
-        <TextView android:id="@id/comment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@id/toWallet"
-                android:layout_toLeftOf="@+id/date"
-                android:textSize="@dimen/smallFontSize"/>
+                android:layout_toLeftOf="@+id/amount"/>
 
         <TextView android:id="@+id/amount"
                 android:layout_width="wrap_content"
@@ -53,7 +36,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@id/amount"
+                android:layout_marginTop="4dp"
                 android:gravity="center_horizontal"
                 android:textSize="@dimen/verySmallFontSize"/>
     </RelativeLayout>
