--- a/WalletPlus/src/main/res/layout/fragment_tag_details.xml
+++ b/WalletPlus/src/main/res/layout/fragment_tag_details.xml
@@ -16,7 +16,7 @@
             <TextView android:id="@+id/tagNameLabel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:text="@string/tagNameLabel"
                     android:textAppearance="?android:attr/textAppearanceSmall"/>
@@ -24,11 +24,20 @@
             <EditText android:id="@+id/tagName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
                     android:layout_below="@+id/tagNameLabel"
+                    android:layout_toStartOf="@+id/colorPicker"
                     android:hint="@string/tagNameHint"
                     android:inputType="textAutoCorrect"
                     android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+            <Button android:id="@+id/colorPicker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/tagName"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignTop="@id/tagName"
+                    android:layout_below="@id/tagNameLabel"/>
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
