--- a/WalletPlus/src/main/res/layout/fragment_tag_list.xml
+++ b/WalletPlus/src/main/res/layout/fragment_tag_list.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/list"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:cacheColorHint="@android:color/transparent"
-    android:descendantFocusability="afterDescendants"
-    android:divider="@null"
-    android:groupIndicator="@null" />
+<TextView android:id="@+id/list"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:cacheColorHint="@android:color/transparent"
+        android:clickable="true"
+        android:gravity="center"
+        android:lineSpacingExtra="4dp"/>
