--- a/WalletPlus/src/main/res/layout/fragment_tag_details.xml
+++ b/WalletPlus/src/main/res/layout/fragment_tag_details.xml
@@ -6,39 +6,53 @@
         android:clipToPadding="false"
         android:padding="@dimen/cardMargin">
 
-    <android.support.v7.widget.CardView android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    <LinearLayout android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-        <RelativeLayout android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/cardContentPadding">
+        <android.support.v7.widget.CardView android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <TextView android:id="@+id/tagNameLabel"
+            <RelativeLayout android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/cardContentPadding">
+
+                <TextView android:id="@+id/tagNameLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:text="@string/tagNameLabel"
+                        android:textAppearance="?android:attr/textAppearanceSmall"/>
+
+                <EditText android:id="@+id/tagName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_below="@+id/tagNameLabel"
+                        android:layout_toStartOf="@+id/colorPicker"
+                        android:hint="@string/tagNameHint"
+                        android:inputType="textAutoCorrect"
+                        android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+                <Button android:id="@+id/colorPicker"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBottom="@+id/tagName"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignTop="@id/tagName"
+                        android:layout_below="@id/tagNameLabel"/>
+
+            </RelativeLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <lecho.lib.hellocharts.view.LineChartView android:id="@+id/chart"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:text="@string/tagNameLabel"
-                    android:textAppearance="?android:attr/textAppearanceSmall"/>
-
-            <EditText android:id="@+id/tagName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_below="@+id/tagNameLabel"
-                    android:layout_toStartOf="@+id/colorPicker"
-                    android:hint="@string/tagNameHint"
-                    android:inputType="textAutoCorrect"
-                    android:textAppearance="?android:attr/textAppearanceMedium"/>
-
-            <Button android:id="@+id/colorPicker"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignBottom="@+id/tagName"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignTop="@id/tagName"
-                    android:layout_below="@id/tagNameLabel"/>
-
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
+                    android:layout_height="250dp"
+                    android:padding="@dimen/cardContentPadding"/>
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
 </ScrollView>
